<resources>
    <string name="app_name">Homescreen</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="ShareIt" />
    <string name="QuestionText">Questions</string>
    <string name="ShareText">Share</string>
    <string name="RouteText">Route</string>
    <string name="CalendarText">Add to calendar</string>
    <string name="Communication_info">Do you have a keen eye and ear for the stories of people and brands? Are you creative with text and image and fascinated by the world of media? Then the Communication course is for you!</string>
    <string name="Communication_info2">Our Communication course trains you in four years to what we - proudly - call a smart connector. A professional who ensures smart connections. With the use of social tools, storytelling, big data and co-creation, for example. You develop creative concepts such as media campaigns, events and story platforms. Based on good research, theory and strategy and of course your own surprising ideas.</string>
    <string name="opendayCommunication">Upcoming openday:                                                  04/04/2019</string>
    <string name="Communication">Communication</string>
    <string name="Communication_info3">The Communication course teaches you to touch, connect and move people as a smart connector.  Curious? Stories from the training can be found on our platform www.smartconnecting.nl.</string>
    <string name="Informatica_info">We train you to be a software engineer. You get started with the development of software for various applications. You are able to analyze design and implement complex IT systems</string>
    <string name="Informatica">Informatica</string>
    <string name="Informatica_info2">Software can be found all around us. You are the specialist in creating large and complex software information systems that work quickly, efficiently and securely. You can think of developing a functional app, but also analyzing large amounts of data from social media. When developing these systems you come into contact with languages. In the first year you learn how to program in Python and  Java / C #. From the second year on, you choose which language you want to use. In addition to programming and developing various applications, you also learn to collaborate.</string>
    <string name="InformaticaOpendag">Upcoming openday:                                                  04/04/2019</string>
    <string name="Informatica_info3">Are you interested in new technological developments, curious, a little quirky and a go-getter, then the Computer Science course is for you!</string>
    <string name="InstitutePage_info">Inside CMI we have the studies Communication(CO),Communication and Multimedia Design (CMD), Creative Media and Game Technologies (CMGT, Technical Informatica (TI) and Informatica (INF). The \'Stadslab\' is also established in the building.</string>
    <string name="opening_hours">opening hours</string>
    <string name="Institute_address">Hogeschool Rotterdam Wijnhaven 107 3011WN, Rotterdam 0906-0708</string>
    <string name="Floorplans">Floorplans</string>
    <string name="Route">Route</string>
    <string name="Website">Website</string>
    <string name="Tech_Informatica">Tech Informatica</string>
    <string name="Tech_Informatica_info">We train you to be a software engineer. You get started with the development of software for various applications. You are able to analyze design and implement complex IT systems</string>
    <string name="Tech_Informatica_info2">Software can be found all around us. You are the specialist in creating complex software systems that work quickly, efficiently and securely. You can think of developing a app, but also analyzing large amounts of data. When developing these systems you come into contact with different languages. In the first year you learn how to program in Python and advanced programming languages ​​such as Java / C #. From the second year on, you choose which programming language you want to use. In addition to programming and developing various applications, you also learn to collaborate.</string>
    <string name="Tech_informatica_openday">Upcoming openday:                                                  04/04/2019</string>
    <string name="Tech_Informatica_info3">Are you interested in new technological developments, curious, a little quirky and a go-getter, then the Computer Science course is for you!</string>
    <string name="CMD_title">Communication and Multimedia Design Open Day</string>
    <string name="CMD_first_date">December 3th, 2018</string>
    <string name="CMD_ex">Exposition of    17:00 - 18:30        4th floor Projects                                             WD4.202</string>
    <string name="Add_To_Calendar">Add to calendar</string>
    <string name="Share_it">Share it</string>
    <string name="Questions">Questions</string>
    <string name="Communication_title">Communication Open Day</string>
    <string name="Creative_media_and_gaming_technologies">Creative Media and Game Technologies Open Day</string>
    <string name="Informatica_title">Informatica Open Day</string>
    <string name="Locations">Wijnhaven 99-103         Wijnhaven 107</string>
    <string name="monday">&#9;Monday &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;07:30 - 19:30 &#9; &#9; &#9; &#9; &#9; &#9; &#9;7:30 - 22:00</string>
    <string name="tuesday">&#9;Tuesday &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;07:30 - 21:00 &#9; &#9; &#9; &#9; &#9; &#9; &#9;7:30 - 21:00</string>
    <string name="wednesday">&#9;Wednesday &#9; &#9; &#9; &#9; &#9;07:30 - 19:30 &#9; &#9; &#9; &#9; &#9; &#9; &#9;7:30 - 22:00</string>
    <string name="thursday">&#9;Thursday &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;07:30 - 19:30 &#9; &#9; &#9; &#9; &#9; &#9; &#9;7:30 - 19:30</string>
    <string name="friday">&#9;Friday &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;07:30 - 17:30 &#9; &#9; &#9; &#9; &#9; &#9; &#9;7:30 - 17:30</string>
    <string name="Question_form">Question form</string>
    <string name="By_car">By car</string>
    <string name="By_car_info">Wijnhaven 107 lays in the center of Rotterdam. If approaching from the south, drive over the Erasmusbrug. When approaching from the north, drive over the Coolsingel in the direction of the Kubuswoningen, then take a right turn at the Posthornstraat, and take the second right turn to Wijnhaven 107.</string>
    <string name="Public_transport">Public transport</string>
    <string name="Public_transport_info">From Rotterdam Central Station, take metroline D too \'De Akkers\' or take metroline E too \'Slinge\'. Exit the metro at station Beurs, walk toward Maritime museum. You should see the building when you\'re standing on \'Plein 1940\'</string>
    <string name="Informatica_button">Informatica</string>
    <string name="Informatica_studie_info">We train you to be a software engineer. You get started with the development of software for various applications. You are able to analyze design and implement complex IT systems</string>
    <string name="Tech_Informatica_button">Technische Informatica</string>
    <string name="Tech_informatica_studie_info">As a technical computer scientist you work on modern IT systems in which hardware and software are integrated. Thanks to programming and hardware knowledge, you can operate at the intersection thereof.</string>
    <string name="Communication_button">Communication</string>
    <string name="Communication_studie_info">Do you have a keen eye and ear for the stories op people and brands? Are you creative with text and image and facinated by the world of media? Then the communication course is for you!</string>
    <string name="Tech_informatica_title">Technische Informatica Open Day</string>
    <string name="Tech_inf_first_date">April 4th, 2019</string>
    <string name="OpendagenText">Open dagen</string>
    <string name="CMD_title_and_second_date">Communication and Multimedia Design open day February 23th 2019</string>
    <string name="CMD_title_and_first_date">Communication and Multimedia Design open day December 3th, 2018</string>
    <string name="What_When_Where">WHAT? &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; WHEN? &#9; &#9; &#9; &#9; &#9;  &#9; &#9; &#9; &#9; WHERE?</string>
    <string name="CMD_title_and_third_date">Communication and Multimedia Design open day April 4th, 2019</string>
    <string name="Communiction_title_and_first_date">Communication open day 23th december 2018</string>
    <string name="Communication_title_and_second_date">Communication open day February 23th 2019</string>
    <string name="Communication_title_and_third_date">Communication open day April 4th, 2019</string>
    <string name="Game_tech_title_and_first_date">Creative Media and Game Technologies open day December 3th, 2018</string>
    <string name="Game_tech_title_and_second_date">Creative Media and Game Technologies open day February 23th, 2019</string>
    <string name="Game_tech_title_and_third_date">Creative Media and Game Technologies open day April 4th, 2019</string>
    <string name="INF_title_first_date">Informatica open day December 3th, 2018</string>
    <string name="INF_title_second_date">Informatica open day February 23th, 2019</string>
    <string name="INF_title_third_date">Informatica open day April 4th, 2019</string>
    <string name="Tech_inf_title_first_date">Technische Informatica open day December 3th, 2018</string>
    <string name="Tech_inf_title_second_date">Technische Informatica open day February 23th, 2019</string>
    <string name="Tech_inf_title_third_date">Technische Informatica open day April 4th, 2019</string>
    <string name="Opening_location"> &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; Wijnhaven 99-103 &#9; &#9; &#9;&#9; &#9;Wijnhaven 107</string>
    <string name="Route_page_school_address">Wijnhaven 107, 3011WN Rotterdam</string>
    <string name="School_tour_1">School &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;20:00 - 21:00 &#9; &#9; &#9; &#9; &#9; &#9;All Floors &#9; &#9; &#9; &#9;Tour                </string>
    <string name="School_tour_2">School &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;17:00 - 18:00 &#9; &#9; &#9; &#9; &#9; &#9;All Floors &#9; &#9; &#9; &#9;Tour                </string>
    <string name="School_tour_3">School &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;15:30 - 16:30 &#9; &#9; &#9; &#9; &#9; &#9;All Floors &#9; &#9; &#9; &#9;Tour                </string>
    <string name="Directors_speech_1">Director's &#9; &#9; &#9; &#9; &#9; &#9; &#9;19:00 - 19:30 &#9; &#9; &#9; &#9; &#9;Base floor &#9; &#9; &#9; &#9;Speech &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;Cafeteria</string>
    <string name="Directors_speech_2">Director's &#9; &#9; &#9; &#9; &#9; &#9; &#9;18:00 - 18:30 &#9; &#9; &#9; &#9; &#9;Base floor &#9; &#9; &#9; &#9;Speech &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;Cafeteria</string>
    <string name="Directors_speech_3">Director's &#9; &#9; &#9; &#9; &#9; &#9; &#9;17:00 - 17:30 &#9; &#9; &#9; &#9; &#9;Base floor &#9; &#9; &#9; &#9;Speech &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;Cafeteria</string>
    <string name="Exposition_of_projects_1">Exposition of &#9; &#9;17:00 - 18:30 &#9; &#9; &#9; &#9; &#9; &#9;4th floor &#9; &#9;Projects &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9; &#9;WD4.202</string>
</resources>