<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC0033"
    tools:context=".openingsHours">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="201dp"
        android:layout_height="168dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hrlogo" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="379dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="#B9FFFFFF"
            android:text="@string/Opening_location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#F2FFFFFF"
            android:text="@string/monday"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#F2FFFFFF"
            android:text="@string/tuesday"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#F2FFFFFF"
            android:text="@string/wednesday"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#F2FFFFFF"
            android:text="@string/thursday"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#F2FFFFFF"
            android:text="@string/friday"
            android:textSize="17sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>