<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC0033">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="383dp"
        android:layout_height="76dp"
        android:layout_below="@+id/view2"
        android:text="@string/Communication_studie_info"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="166dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/cmi" />

    <Button
        android:id="@+id/informaticaClick"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="false"
        android:text="@string/Informatica_button"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/techinformaticaClick"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:text="@string/Tech_Informatica_button"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/communicationClick"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:text="@string/Communication_button"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="348dp"
        android:layout_height="80dp"
        android:layout_below="@+id/lijn1"
        android:text="@string/Informatica_studie_info"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="383dp"
        android:layout_height="70dp"
        android:layout_below="@id/view"
        android:text="@string/Tech_informatica_studie_info"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/lijn1"
        android:layout_width="315dp"
        android:layout_height="3dp"
        android:layout_below="@+id/informaticaClick"


        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/view"
        android:layout_width="315dp"
        android:layout_height="3dp"
        android:layout_below="@+id/techinformaticaClick"
        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/view2"
        android:layout_width="315dp"

        android:layout_height="3dp"
        android:layout_below="@+id/communicationClick"
        android:background="@android:color/white"
        ></View>




</RelativeLayout>