<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommunicationPage"
    android:background="#CC0033">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="368dp"
        android:layout_height="80dp"
        android:layout_below="@+id/lijn2"
        android:text="@string/Communication_studie_info"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="335dp"
        android:layout_height="102dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/appz" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="234dp"
        android:layout_height="44dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/Communication"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="374dp"
        android:layout_height="149dp"
        android:layout_below="@id/lijn3"
        android:text="@string/Communication_info2"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_below="@+id/lijn4"
        android:layout_centerHorizontal="true"
        android:text="@string/opendayCommunication"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="384dp"
        android:layout_height="115dp"
        android:layout_below="@+id/lijn5"
        android:text="@string/Communication_info3"
        android:textColor="#FFFFFF" />


    <View
        android:id="@+id/lijn2"
        android:layout_width="315dp"
        android:layout_height="3dp"
        android:layout_below="@+id/textView7"
        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/lijn3"
        android:layout_width="315dp"
        android:layout_height="3dp"
        android:layout_below="@+id/textView8"
        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/lijn4"
        android:layout_width="315dp"
        android:layout_below="@+id/textView9"
        android:layout_height="3dp"
        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/lijn5"
        android:layout_width="315dp"
        android:layout_below="@+id/textView10"
        android:layout_height="3dp"
        android:background="@android:color/white"
        ></View>


</RelativeLayout>