<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformaticaPage"
    android:background="#CC0033">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="368dp"
        android:layout_height="80dp"
        android:layout_below="@+id/lijn9"
        android:text="@string/Informatica_info"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="335dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/appz" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="178dp"
        android:layout_height="44dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/Informatica"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="392dp"
        android:layout_height="181dp"
        android:layout_below="@+id/lijn6"
        android:text="@string/Informatica_info2"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_below="@+id/lijn7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/InformaticaOpendag"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="384dp"
        android:layout_height="59dp"
        android:layout_below="@+id/lijn8"
        android:layout_marginTop="30dp"

        android:text="@string/Informatica_info3"
        android:textColor="#FFFFFF" />


    <View
        android:id="@+id/lijn9"
        android:layout_width="315dp"
        android:layout_height="3dp"

        android:layout_below="@+id/textView7"
        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/lijn6"
        android:layout_width="315dp"

        android:layout_height="3dp"
        android:layout_below="@+id/textView8"
        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/lijn7"
        android:layout_width="315dp"

        android:layout_height="3dp"
        android:layout_below="@+id/textView9"
        android:background="@android:color/white"
        ></View>

    <View
        android:id="@+id/lijn8"
        android:layout_width="315dp"

        android:layout_height="3dp"
        android:layout_below="@+id/textView10"
        android:background="@android:color/white"
        ></View>

</RelativeLayout>

